--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.4.0",
     "react-chat-widget": "^3.0.5",
     "react-dom": "^17.0.1",
+    "react-parallax": "^3.1.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
