--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
     "bootstrap": "^4.5.3",
+    "html-to-react": "^1.4.5",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-chat-widget": "^3.0.5",
     "react-dom": "^17.0.1",
+    "react-icons": "^3.11.0",
     "react-parallax": "^3.1.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
