--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "reactjs-popup": "^2.0.4",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
@@ -50,5 +51,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify/icons-logos": "^1.0.12",
+    "@iconify/react": "^1.1.3"
   }
 }
