--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@iconify/icons-logos": "^1.0.12",
+    "@iconify/react": "^2.0.0-rc.2",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
@@ -52,8 +54,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@iconify/icons-logos": "^1.0.12",
-    "@iconify/react": "^1.1.3"
-  }
+  "devDependencies": {}
 }
