--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-parallax": "^3.1.2",
+    "react-responsive-modal": "^5.2.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
