--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.19.4",
     "@types/react": "^16.9.56",
+    "@types/react-animate-on-scroll": "^2.1.2",
     "@types/react-chat-widget": "^2.1.0",
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
@@ -18,6 +19,7 @@
     "html-to-react": "^1.4.5",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.4.0",
     "react-chat-widget": "^3.0.5",
     "react-dom": "^17.0.1",
