--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-animate-on-scroll": "^2.1.2",
     "@types/react-chat-widget": "^2.1.0",
     "@types/react-dom": "^16.9.9",
+    "@types/react-image-gallery": "^1.0.1",
     "@types/react-router-dom": "^5.1.6",
     "bootstrap": "^4.5.3",
     "html-to-react": "^1.4.5",
@@ -24,6 +25,7 @@
     "react-chat-widget": "^3.0.5",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
+    "react-image-gallery": "^1.0.8",
     "react-parallax": "^3.1.2",
     "react-player": "^2.6.2",
     "react-responsive-modal": "^5.2.6",
